practice: slf4j를 이용한 로깅 실습

--- a/soyun/Spring-MVC-1/6.스프링MVC-기본기능/springmvc/src/main/resources/application.properties
+++ b/soyun/Spring-MVC-1/6.스프링MVC-기본기능/springmvc/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+#hello.springmvc 패키지와 그 하위 로그 레벨 설정
+# logging.level.hello.springmvc=trace   // 가장 낮은 레벨의 로그까지 출력
+logging.level.hello.springmvc=info
 
+# 전체 로그 레벨 설정 (기본 info, 더 좁은 패키지의 로그 레벨 설정이 더 높은 우선순위)
+logging.level.hello.root=info
