add: HTTP 요청/응답 실습에 필요한 리소스 추가

--- a/soyun/Spring-MVC-1/6.스프링MVC-기본기능/springmvc/src/main/resources/application.properties
+++ b/soyun/Spring-MVC-1/6.스프링MVC-기본기능/springmvc/src/main/resources/application.properties
@@ -4,3 +4,7 @@ logging.level.hello.springmvc=info
 
 # 전체 로그 레벨 설정 (기본 info, 더 좁은 패키지의 로그 레벨 설정이 더 높은 우선순위)
 logging.level.hello.root=info
+
+# Thymeleaf 기본값
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
